--- a/car-details-smartconnect-sale.html
+++ b/car-details-smartconnect-sale.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=6">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=7">
     </head>
 
     <body class="car-details">
@@ -33,6 +33,7 @@
                                     <li><a class="dropdown-item" href="./buy-it-now.html">Buy it now</a></li>
                                     <li><a class="dropdown-item" href="./smart-connect.html">Smart Connect</a></li>
                                     <li><a class="dropdown-item" href="./favourites.html">Favourites</a></li>
+                                    <li><a class="dropdown-item" href="./editions.html">Editions</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
@@ -350,6 +351,24 @@
                                         <div class="cd-row">
                                             <div class="cd-col">
                                                 <span class="cdr-label"> Panel damage </span>
+                                            </div>
+                                            <div class="cd-col">
+                                                <span class="cdr-value">1 small (0-5cm)</span>
+                                            </div>
+                                        </div>
+                                        <div class="cd-row">
+                                            <div class="cd-col">
+                                                <img src="./assets/img/car-panel-2.png" alt="Panel"
+                                                    class="cdr-img cdr-img-outline">
+                                            </div>
+                                            <div class="cd-col">
+                                                <img src="./assets/img/example-car-img.png" alt="Panel" class="cdr-img">
+                                            </div>
+                                        </div>
+                                        <div class="cd-border"></div>
+                                        <div class="cd-row">
+                                            <div class="cd-col">
+                                                <span class="cdr-label"> Exterior wear & tear </span>
                                             </div>
                                             <div class="cd-col">
                                                 <span class="cdr-value">1 small (0-5cm)</span>
@@ -777,7 +796,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=6"></script>
+        <script src="./assets/js/custom.js?v=7"></script>
     </body>
 
 </html>
