--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=6">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=7">
     </head>
 
     <body class="homepage">
@@ -32,8 +32,6 @@
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                     data-bs-toggle="dropdown" aria-expanded="false"> Services </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="./live-sale.html">Live sale</a></li>
-                                    <li><a class="dropdown-item" href="#">SmartHub</a></li>
                                     <li><a class="dropdown-item" href="#">SmartDrop</a></li>
                                     <li><a class="dropdown-item" href="#">SmartConnect</a></li>
                                     <li><a class="dropdown-item" href="#">SmartMatch</a></li>
@@ -143,7 +141,7 @@
                             <div class="home-sec-2-imgs ps-lg-0 ps-sm-5 mt-5 position-relative">
                                 <div class="hs-2-img-1 hs-2-img">
                                     <div class="hh-tooltip hht-3">
-                                        <img src="./assets/img/hh-tooltip-1.svg" alt="Tooltips" class="w-100"
+                                        <img src="./assets/img/hh-tooltip-3.svg" alt="Tooltips" class="w-100"
                                             data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
                                     </div>
                                     <img src="./assets/img/home-sec-2-img-1.png" alt="Home Sec" data-aos="fade-up" data-aos-duration="700">
@@ -234,7 +232,7 @@
                                     <img src="./assets/img/iPhone-14-Pro-frame.png" alt="Mobile" class="hs-4-frame">
                                 </div>
                                 <div class="hh-tooltip hht-6">
-                                    <img src="./assets/img/hh-tooltip-6.png" alt="Tooltips" class="w-100">
+                                    <img src="./assets/img/hh-tooltip-6.svg" alt="Tooltips" class="w-100">
                                 </div>
                             </div>
                         </div>
@@ -356,7 +354,7 @@
                                         <span>Quick Sale</span>
                                     </div>
                                     <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                    <img src="./assets/img/c-white.svg" alt="C" class="csmart-logo">
+                                    <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon">
                                     <div class="grade-badge-cont">
                                         <span class="gb-text">Grade A</span>
                                         <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -394,7 +392,7 @@
                                         <span>Private</span>
                                     </div>
                                     <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                    <img src="./assets/img/c-green.png" alt="C" class="csmart-logo">
+                                    <img src="./assets/img/favourite.svg" alt="C" class="like-unlike-icon">
                                     <div class="grade-badge-cont">
                                         <span class="gb-text">Grade A</span>
                                         <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -452,7 +450,7 @@
                                         <span>Wholesale</span>
                                     </div>
                                     <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                    <img src="./assets/img/c-white.svg" alt="C" class="csmart-logo">
+                                    <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon">
                                     <div class="grade-badge-cont">
                                         <span class="gb-text">Grade A</span>
                                         <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -492,7 +490,7 @@
                                         <span>Private</span>
                                     </div>
                                     <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                    <img src="./assets/img/c-white.svg" alt="C" class="csmart-logo">
+                                    <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon">
                                     <div class="grade-badge-cont">
                                         <span class="gb-text">Grade A</span>
                                         <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -776,7 +774,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=6"></script>
+        <script src="./assets/js/custom.js?v=7"></script>
     </body>
 
 </html>
