--- a/our-policy.html
+++ b/our-policy.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=6">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=7">
     </head>
 
     <body>
@@ -34,6 +34,7 @@
                                     <li><a class="dropdown-item active" href="./smart-connect.html">Smart Connect</a>
                                     </li>
                                     <li><a class="dropdown-item" href="./favourites.html">Favourites</a></li>
+                                    <li><a class="dropdown-item" href="./editions.html">Editions</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
@@ -106,7 +107,7 @@
         </header>
         <!-- Header End -->
         <!-- Main -->
-        <main class="mb-5 pb-4">
+        <main class="mb-5 pb-5">
             <section class="pt-5 mt-lg-3">
                 <div class="container">
                     <div class="d-flex flex-column gap-4 align-items-center text-center text-white">
@@ -114,13 +115,13 @@
                             <img src="./assets/img/Rays-purple-left.svg" alt="Rays" style="width: 37px;">
                             <span class="page-title ms-1">Our Policy </span>
                         </div>
-                        <p class="mt-lg-2 page-subtitle">Price changes and Voided Sales Policy</p>
+                        <p class="mt-lg-2 page-subtitle mb-0">Price changes and Voided Sales Policy</p>
                     </div>
                 </div>
                 <div class="page-border"></div>
             </section>
             <section class="page-content">
-                <div class="container">
+                <div class="container pb-4">
                     <div class="px-xl-5">
                         <div class="d-flex flex-column gap-4 text-white">
                             <p class="mb-0 policy-desc">At our company, we prioritize accuracy by thoroughly reviewing
@@ -170,9 +171,10 @@
                         </div>
                     </div>
                 </div>
+                <div class="page-border"></div>
             </section>
-            <section class="pt-5 pb-5 mt-5 mb-5 home-cta">
-                <div class="container py-lg-4">
+            <section class="pt-5 pb-4 mt-5 home-cta">
+                <div class="container pt-4">
                     <div class="home-cta-box">
                         <div class="hcb-title">
                             <img src="./assets/img/Rays-purple-left.svg" alt="Rays">
@@ -355,7 +357,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=6"></script>
+        <script src="./assets/js/custom.js?v=7"></script>
     </body>
 
 </html>
