--- a/pages.html
+++ b/pages.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=6">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=7">
     </head>
 
     <body>
@@ -34,6 +34,7 @@
                 <li><a href="./buy-it-now.html" class="text-white">Buy it now</a></li>
                 <li><a href="./smart-connect.html" class="text-white">SmartConnect</a></li>
                 <li><a href="./favourites.html" class="text-white">Favourites</a></li>
+                                    <li><a class="dropdown-item" href="./editions.html">Editions</a></li>
                 <li><a href="./profile.html" class="text-white">Profile <small>(See the popups by clicking on the edit icons in front of payment methods)</small></a></li>
                 <li><a href="./dashboard-invoices.html" class="text-white">Dashboard Invoices</a></li>
                 <li><a href="./dashboard-credits.html" class="text-white">Dashboard Credits</a></li>
@@ -60,7 +61,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=6"></script>
+        <script src="./assets/js/custom.js?v=7"></script>
     </body>
 
 </html>
