--- a/password-confirmation.html
+++ b/password-confirmation.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=6">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=7">
     </head>
 
     <body class="form-page password-confirmation-page">
@@ -25,7 +25,7 @@
                         <img src="./assets/img/carsmart-logo-full-color-rgb 1.svg" alt="Logo" class="fp-logo d-block">
                         <div class="fp-form-box-outer">
                             <div class="fp-form-box">
-                                <h2 class="fp-form-title mb-0">Change Changed Successfully</h2>
+                                <h2 class="fp-form-title mb-0">Paassword Changed Successfully</h2>
                                 <form action="" class="fp-form d-flex flex-column gap-4">
                                     <div class="fpf-bottom">
                                         <a href="./signin-1.html" class="btn btn-main d-flex align-items-center w-100 justify-content-center"><span>Dashboard Login</span><svg
@@ -71,7 +71,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=6"></script>
+        <script src="./assets/js/custom.js?v=7"></script>
     </body>
 
 </html>
