--- a/signup-confirmation.html
+++ b/signup-confirmation.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=6">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=7">
     </head>
 
     <body>
@@ -32,8 +32,6 @@
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                     data-bs-toggle="dropdown" aria-expanded="false"> Services </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="./live-sale.html">Live sale</a></li>
-                                    <li><a class="dropdown-item" href="#">SmartHub</a></li>
                                     <li><a class="dropdown-item" href="#">SmartDrop</a></li>
                                     <li><a class="dropdown-item" href="#">SmartConnect</a></li>
                                     <li><a class="dropdown-item" href="#">SmartMatch</a></li>
@@ -62,10 +60,11 @@
                 </div>
             </nav>
             <div class="container flex-grow-1 d-flex flex-column justify-content-center">
-                <div class="d-flex signup-hero-content flex-column gap-xl-5 gap-lg-4 gap-4 mb-md-0 mb-5">
-                    <div class="d-flex gap-2 shc-title">
+                <div class="d-flex signup-hero-content flex-column gap-3 mb-md-0 mb-5">
+                    <div class="d-flex gap-2 shc-title mb-1">
                         <img src="./assets/img/Rays-purple-left.svg" alt="Rays">
-                        <h2 class="mb-0 fw-medium ms-1">SmartHub <span class="purple-underline">Sign up</span></h2>
+                        <h2 class="mb-0 fw-medium ms-1"><span class="purple-underline">SmartHub</span> <span
+                                class="d-block">Sign up</span> <span class="d-block">form</span></h2>
                     </div>
                     <div class="ps-xl-5">
                         <a href="#signup-sec"
@@ -268,7 +267,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=6"></script>
+        <script src="./assets/js/custom.js?v=7"></script>
     </body>
 
 </html>
