--- a/buy-it-now.html
+++ b/buy-it-now.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=6">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=7">
     </head>
 
     <body>
@@ -33,6 +33,7 @@
                                     <li><a class="dropdown-item active" href="./buy-it-now.html">Buy it now</a></li>
                                     <li><a class="dropdown-item" href="./smart-connect.html">Smart Connect</a></li>
                                     <li><a class="dropdown-item" href="./favourites.html">Favourites</a></li>
+                                    <li><a class="dropdown-item" href="./editions.html">Editions</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
@@ -404,7 +405,7 @@
                                                 <span>SmartConnect</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/c-white.svg" alt="C" class="csmart-logo">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -457,7 +458,7 @@
                                                 <span>Private</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/c-green.png" alt="C" class="csmart-logo">
+                                            <img src="./assets/img/favourite.svg" alt="C" class="like-unlike-icon">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -510,7 +511,7 @@
                                                 <span>SmartConnect</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/c-white.svg" alt="C" class="csmart-logo">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -563,7 +564,7 @@
                                                 <span>Private</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/c-green.png" alt="C" class="csmart-logo">
+                                            <img src="./assets/img/favourite.svg" alt="C" class="like-unlike-icon">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -616,7 +617,7 @@
                                                 <span>SmartConnect</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/c-white.svg" alt="C" class="csmart-logo">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -669,7 +670,7 @@
                                                 <span>Private</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/c-green.png" alt="C" class="csmart-logo">
+                                            <img src="./assets/img/favourite.svg" alt="C" class="like-unlike-icon">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -722,7 +723,7 @@
                                                 <span>SmartConnect</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/c-white.svg" alt="C" class="csmart-logo">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -775,7 +776,7 @@
                                                 <span>Private</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/c-green.png" alt="C" class="csmart-logo">
+                                            <img src="./assets/img/favourite.svg" alt="C" class="like-unlike-icon">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -828,7 +829,7 @@
                                                 <span>SmartConnect</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/c-white.svg" alt="C" class="csmart-logo">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -1078,7 +1079,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=6"></script>
+        <script src="./assets/js/custom.js?v=7"></script>
     </body>
 
 </html>
