--- a/car-details-quick-sale.html
+++ b/car-details-quick-sale.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=6">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=7">
     </head>
 
     <body class="car-details">
@@ -33,6 +33,7 @@
                                     <li><a class="dropdown-item" href="./buy-it-now.html">Buy it now</a></li>
                                     <li><a class="dropdown-item" href="./smart-connect.html">Smart Connect</a></li>
                                     <li><a class="dropdown-item" href="./favourites.html">Favourites</a></li>
+                                    <li><a class="dropdown-item" href="./editions.html">Editions</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
@@ -157,7 +158,7 @@
                                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                                 </div>
                                 <div class="cd-flex-3 cdf-form-part">
-                                    <h4 class="cd-title">Whats the seller shared</h4>
+                                    <h4 class="cd-title">Trade Declaration - Whats the seller shared</h4>
                                     <div class="cdf-form">
                                         <div class="sfc-form-group">
                                             <div class="d-flex align-items-center gap-2">
@@ -168,7 +169,7 @@
                                             <div class="row sfc-row gap-md-0 gap-2">
                                                 <div class="col-12">
                                                     <input type="text" class="form-control fpf-inp sfc-inp"
-                                                        placeholder="Ex: 2 Years" value="Ans is here.">
+                                                        placeholder="Ex: 2 Years" value="Ans goes here." readonly>
                                                 </div>
                                             </div>
                                         </div>
@@ -180,7 +181,7 @@
                                             <div class="row sfc-row gap-md-0 gap-2">
                                                 <div class="col-12">
                                                     <input type="text" class="form-control fpf-inp sfc-inp"
-                                                        placeholder="Ex: 2 Years" value="Ans is here.">
+                                                        placeholder="Ex: 2 Years" value="Ans goes here." readonly>
                                                 </div>
                                             </div>
                                         </div>
@@ -193,7 +194,7 @@
                                             <div class="row sfc-row gap-md-0 gap-2">
                                                 <div class="col-12">
                                                     <input type="text" class="form-control fpf-inp sfc-inp"
-                                                        placeholder="Ex: 2 Years" value="Ans is here.">
+                                                        placeholder="Ex: 2 Years" value="Ans goes here." readonly>
                                                 </div>
                                             </div>
                                         </div>
@@ -218,7 +219,7 @@
                                                         </div>
                                                     </div>
                                                     <input type="text" class="form-control fpf-inp sfc-inp"
-                                                        placeholder="Ex: 2 Years" value="Ans is here.">
+                                                        placeholder="Ex: 2 Years" value="Ans goes here." readonly>
                                                 </div>
                                             </div>
                                         </div>
@@ -418,6 +419,24 @@
                                         <div class="cd-row">
                                             <div class="cd-col">
                                                 <span class="cdr-label"> Panel damage </span>
+                                            </div>
+                                            <div class="cd-col">
+                                                <span class="cdr-value">1 small (0-5cm)</span>
+                                            </div>
+                                        </div>
+                                        <div class="cd-row">
+                                            <div class="cd-col">
+                                                <img src="./assets/img/car-panel-2.png" alt="Panel"
+                                                    class="cdr-img cdr-img-outline">
+                                            </div>
+                                            <div class="cd-col">
+                                                <img src="./assets/img/example-car-img.png" alt="Panel" class="cdr-img">
+                                            </div>
+                                        </div>
+                                        <div class="cd-border"></div>
+                                        <div class="cd-row">
+                                            <div class="cd-col">
+                                                <span class="cdr-label"> Exterior wear & tear </span>
                                             </div>
                                             <div class="cd-col">
                                                 <span class="cdr-value">1 small (0-5cm)</span>
@@ -670,6 +689,9 @@
                                             <button
                                                 class="btn btn-main text-white bg-transparent border-white w-100 justify-content-center d-flex align-items-center"><span>Submit
                                                     offer</span>
+                                                <button
+                                                    class="btn btn-main text-white bg-transparent border-white w-100 justify-content-center d-flex align-items-center"><span>SmartExchange</span>
+                                                </button>
                                             </button>
                                             <button
                                                 class="btn btn-main text-white bg-transparent border-0 w-100 justify-content-center d-flex align-items-center"><span>Cancel
@@ -879,7 +901,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=6"></script>
+        <script src="./assets/js/custom.js?v=7"></script>
     </body>
 
 </html>
