--- a/profile.html
+++ b/profile.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=6">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=7">
     </head>
 
     <body>
@@ -34,6 +34,7 @@
                                     <li><a class="dropdown-item active" href="./smart-connect.html">Smart Connect</a>
                                     </li>
                                     <li><a class="dropdown-item" href="./favourites.html">Favourites</a></li>
+                                    <li><a class="dropdown-item" href="./editions.html">Editions</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
@@ -1213,7 +1214,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=6"></script>
+        <script src="./assets/js/custom.js?v=7"></script>
     </body>
 
 </html>
